web/src/resources/osk/kmwosk.css
/* ... */
.desktop .kmw-osk-frame{position:absolute;width:auto;height:auto;left:0;top:0;display:none;margin:0;padding:0;
          border:2px solid #ad4a28;border-radius:2px;background-color:#666;box-sizing:border-box;-moz-box-sizing:border-box;}
.desktop .kmw-osk-inner-frame{margin:0;background-color:#666;border:2px solid #ad4a28;box-sizing:border-box;-moz-box-sizing:border-box;}
.desktop .kmw-key-layer-group{width:100%;height:100%;margin:0;padding:0;border:none;background:transparent;}
.desktop .kmw-key-layer{width:100%;height:100%;margin:0;padding:0;background-color:transparent;overflow:hidden;}
.desktop .kmw-key-square{height:100%;font-size:0.8em;overflow:hidden;background-color:transparent;cursor:default;}
.desktop .kmw-key {border-radius:6px;overflow:hidden;width:100%;height:100%;}
.desktop .kmw-key-label{position:absolute;left:2px;top:2px;font:0.5em Arial;color:#888;background-color:transparent;}

/* Popup icon style (and content)*/
.kmw-key-popup-icon:before{content:'\2022';}

.kmw-key-popup-icon{position:absolute;display:block;visibility:visible;right:4%;top:1%;/*width:8px;height:8px;*/
      font:bold 0.5em Arial;color:#aaa;}
/*.phone .kmw-key-popup-icon{right:6%;top:-2px;width:8px;height:8px;text-align:right;}
.desktop .kmw-key-popup-icon{right:4%;top:0;width:8px;height:8px;} */

.phone.android .kmw-key-popup-icon {top:1px;right:8%;}
.phone.android .kmw-key-label {left:10%;top:4%;}

.tablet.android .kmw-key-popup-icon {top:0px;right:5%;}
.tablet.android .kmw-key-label {left:6%;top:3%;}

/*  Additional desktop element styles */
.kmw-footer{height:16px;width:auto;margin:0;padding:0;padding-top:2px;background-color:#ad4a28;border-radius:0 0 6px 6px;}
.kmw-title-bar{height:20px; width:auto; margin:0; background-color:#ad4a28; padding:0;border-radius:6px 6px 0 0;}
.kmw-title-bar-caption{color:white;margin:0 20px 0 4px;font:bold 0.8em Arial;}
.kmw-title-bar-actions{position: absolute; cursor: default; right:2px; top:0; width: 33px; height: 13px;}
.kmw-footer-caption{color:#fff;font:0.7em Arial;margin:0 0 0 4px;}

.kmw-banner-bar{height:100%; width:100%; margin:0; background-color:darkorange; display: inline-block; white-space: nowrap;}
.kmw-banner-bar .kmw-banner-separator {border-left: solid 1px #8a8d90; width: 0px; vertical-align: middle; height: 45%; display: inline-block;}
.kmw-banner-bar .kmw-suggest-option {display:inline-block; text-align: center; height: 85%; overflow-x:hidden}
.kmw-suggestion-text{color:#fff; line-height: normal; position: relative; vertical-align: middle;}

.kmw-footer-resize{cursor:se-resize;position:absolute;right:2px;bottom:2px;width:16px;height:16px;overflow:hidden;
          font-family:SpecialOSK;color:white;}
.kmw-footer-resize:hover{font-weight:bold;}
.kmw-footer-resize:before {content:'\e023';}

.kmw-title-bar-image {cursor: default; float:right; padding: 2px 2px 0 0; width:16px; height:16px;
          font-family:SpecialOSK; color:white;}
.kmw-title-bar-image:hover{font-weight:bold;}
#kmw-pin-image:before{content:'\e024';}
#kmw-config-image:before{content:'\e030';}
#kmw-help-image:before{content:'\e042';}
#kmw-close-button:before {content:'\e025';}

/* Common key appearance styles (can override with form-factor styles if necessary) */
.kmw-key-default{color:#000;background-color:#eee;}
.kmw-key-shift{color:#aaa;background-color:#ddd;}     /*color was #88f (blue) */
.kmw-key-shift-on,
.kmw-key-special-on{color:#88f;background-color:#ccf;}
.kmw-key-deadkey{color:#0d0;background-color:#eee;}
.kmw-key-blank{color:#000;background-color:rgba(100,100,100,0.5);}
.kmw-key-hidden{visibility:hidden;}
.kmw-key-touched{background-color:#447;}

/* Adjust font (image) size on special keys */
.tablet .kmw-key-shift, .tablet .kmw-key-shift-on{font-size:0.8em !important;}
.phone .kmw-key-shift, .phone .kmw-key-shift-on{font-size:0.7em !important;}

/* Set special font and style for modifier and special key images */
body div.kmw-key-shift span.kmw-key-text {font-family:SpecialOSK !important;font-size:1em !important;}
body div.kmw-key-shift-on span.kmw-key-text {font-family:SpecialOSK !important;font-size:1em !important;}
#kmw-popup-keys div.kmw-key-shift span.kmw-key-text {font-family:SpecialOSK !important;}

/* Style for callout used on phones */
#kmw-popup-callout {
  position: absolute;
  display: block;
  background-color: #fdfdfe;
  border-radius: 0 0 5px 5px;
  z-index: 10002;
  pointer-events:none;
  border-bottom: solid 1px #8a8d90;
  box-sizing: border-box;
}

#kmw-keytip {
  z-index: 10002;
}

/* Key preview styles */

div.ios div.kmw-keytip, div.android div.kmw-keytip {
  position: absolute;
  left: 0;
  top: 0;
  width: 3em;
  height: 3em;
  overflow: visible;
}

div.ios div.kmw-keytip {
  background-color: rgb(0, 0, 0, 0);
}

div.ios div.kmw-keytip-tip {
  position: absolute;
  top: 0;
  width: 100%;
  border-radius: 6px 6px 4px 4px;
  border: solid 1px #cccccc;
  border-bottom: solid 1px #8a8d90;
  box-sizing: border-box;
}

div.ios div.kmw-keytip-cap, div.android div.kmw-keytip-cap {
  position: absolute;
  border-radius: 0 0 5px 5px;
}

div.ios div.kmw-keytip-cap {
  border-top: solid 1px white;
  border-bottom: solid 1px #8a8d90;
}

span.kmw-keytip-label {
  display: block;
  transform: translateY(-50%);
  top: 50%;
  position: relative;
}

div.ios div.kmw-keytip-cap,
div.ios div.kmw-keytip-tip {
  background:white;
  /* background-clip: required to prevent antialiasing on top edge on hi-res devices e.g. iPhone 13 pro + iOS 15.4 */
  background-clip: content-box;
}

div.android div.kmw-keytip {
  color: white;
}

div.android div.kmw-keytip-tip {
  border-radius: 6px;
  background: #999;
}

div.android div.kmw-keytip-cap {
  background: #999;
  border-bottom: solid 1px #8a8d90
}
/* ... */

